objects/ASI_MFM_Budget__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_On_premise_Off_premise__c</fullName>
        <label>On-premise/Off-premise</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On-premise</fullName>
                </value>
                <value>
                    <fullName>Off-premise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_P10_Volume_9L__c</fullName>
        <label>P10 Volume(9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_P11_Volume_9L__c</fullName>
        <label>P11 Volume(9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_P12_Volume_9L__c</fullName>
        <label>P12 Volume(9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Salesperson__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesperson</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sell_in_Sell_out__c</fullName>
        <label>Sell-in/Sell-out</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sell-in</fullName>
                </value>
                <value>
                    <fullName>Sell-out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_TH_Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CVS</fullName>
                </value>
                <value>
                    <fullName>SH</fullName>
                </value>
                <value>
                    <fullName>Direct Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_TH_Region__c</fullName>
        <formula>ASI_CRM_Salesperson__r.ASI_KOR_User_Region_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Team__c</fullName>
        <label>Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On-premise</fullName>
                </value>
                <value>
                    <fullName>WS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Volume_9L__c</fullName>
        <formula>ASI_CRM_P1_Volume_9L__c + ASI_CRM_P2_Volume_9L__c + ASI_CRM_P3_Volume_9L__c + ASI_CRM_P4_Volume_9L__c + ASI_CRM_P5_Volume_9L__c + ASI_CRM_P6_Volume_9L__c + ASI_CRM_P7_Volume_9L__c + ASI_CRM_P8_Volume_9L__c + ASI_CRM_P9_Volume_9L__c + ASI_CRM_P10_Volume_9L__c + ASI_CRM_P11_Volume_9L__c + ASI_CRM_P12_Volume_9L__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Volume(9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_AP_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AP Code</label>
        <referenceTo>ASI_MFM_AP_Code__c</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_A_C_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>A/C Code</label>
        <referenceTo>ASI_MFM_A_C_Code__c</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_BU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BU</label>
        <referenceTo>ASI_MFM_BU__c</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Budget_External_ID_Upload__c</fullName>
        <description>Custom External ID for Mass Upload</description>
        <externalId>true</externalId>
        <label>Budget External ID (Upload)</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_MFM_Budget_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Budget External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_MFM_Budget_Type__c</fullName>
        <label>Budget Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CAPEX</fullName>
                </value>
                <value>
                    <fullName>OPEX</fullName>
                </value>
                <value>
                    <fullName>T&amp;E</fullName>
                </value>
                <value>
                    <fullName>A&amp;P</fullName>
                </value>
                <value>
                    <fullName>NORM</fullName>
                </value>
                <value>
                    <fullName>DISC</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Gasoline</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Lens</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Checking_External_ID__c</fullName>
        <description>Fiscal Year &amp; Budget Type &amp;   Type &amp;   Project code   &amp;   AP Type &amp;  Brand Group</description>
        <formula>Text(ASI_MFM_Fiscal_Year__c)  &amp;  Text(ASI_MFM_Budget_Type__c)  &amp; Text(ASI_MFM_Type__c)  &amp; ASI_MFM_Code__c &amp; Text(ASI_MFM_KR_AP_Type__c)  &amp; SUBSTITUTE(ASI_MFM_Sub_brand_Code__r.ASI_MFM_Brand__r.ASI_CRM_CN_Brand_Group_c__r.Name,&quot;&apos;&quot;,&quot;-&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Checking External ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Code</label>
        <referenceTo>ASI_MFM_Project_Code__c</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>KRW</fullName>
                </value>
                <value>
                    <fullName>MYR</fullName>
                </value>
                <value>
                    <fullName>PHP</fullName>
                </value>
                <value>
                    <fullName>SGD</fullName>
                </value>
                <value>
                    <fullName>THB</fullName>
                </value>
                <value>
                    <fullName>TWD</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Customer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Name</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 OR 6</booleanFilter>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>TW Customer</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Outlet (HK)</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>GF Customer</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>ASI JP Supplier</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Outlet (TH), Wholesaler (TH), Modern Trade (TH), Potential Outlet (TH), TH Supplier</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Modern Trade (TH)</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Department__c</fullName>
        <description>SFDC Prefix:  ASI TH MFM</description>
        <label>Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Domain__c</fullName>
        <label>Domain</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Back Office</fullName>
                </value>
                <value>
                    <fullName>Front Office</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Helpdesk</fullName>
                </value>
                <value>
                    <fullName>Infrastructure</fullName>
                </value>
                <value>
                    <fullName>CIO/PMO/IT Governance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY1011</fullName>
                </value>
                <value>
                    <fullName>FY1112</fullName>
                </value>
                <value>
                    <fullName>FY1213</fullName>
                </value>
                <value>
                    <fullName>FY1314</fullName>
                </value>
                <value>
                    <fullName>FY1415</fullName>
                </value>
                <value>
                    <fullName>FY1516</fullName>
                </value>
                <value>
                    <fullName>FY1617</fullName>
                </value>
                <value>
                    <fullName>FY1718</fullName>
                </value>
                <value>
                    <fullName>FY1819</fullName>
                </value>
                <value>
                    <fullName>FY1920</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_KR_AP_Type__c</fullName>
        <label>AP Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A&amp;D</fullName>
                </value>
                <value>
                    <fullName>Media A&amp;P</fullName>
                </value>
                <value>
                    <fullName>Other A&amp;P</fullName>
                </value>
                <value>
                    <fullName>Trade A&amp;P</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_P10_Amount__c</fullName>
        <label>P10 Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_P11_Amount__c</fullName>
        <label>P11 Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_P12_Amount__c</fullName>
        <label>P12 Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PARIS_Account__c</fullName>
        <description>Input Trade/Consumer TH ASI MFM</description>
        <label>PARIS Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PARIS_Channel__c</fullName>
        <description>For Thailand (TH) ASI MFM Use</description>
        <label>PARIS Channel</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Plan_Line_Item__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Plan Line Item</label>
        <referenceTo>ASI_MFM_Plan_Line_Item__c</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Plan__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Plan</label>
        <referenceTo>ASI_MFM_Plan__c</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Reference__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Reference</label>
        <referenceTo>ASI_MFM_Reference__c</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Region_AND_Customer__c</fullName>
        <description>ASI_MFM_Region_Customer</description>
        <label>Region AND Customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Remarks__c</fullName>
        <label>Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Size__c</fullName>
        <label>Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>35ml</fullName>
                </value>
                <value>
                    <fullName>200ml</fullName>
                </value>
                <value>
                    <fullName>300ml</fullName>
                </value>
                <value>
                    <fullName>375ml</fullName>
                </value>
                <value>
                    <fullName>500ml</fullName>
                </value>
                <value>
                    <fullName>700ml</fullName>
                </value>
                <value>
                    <fullName>750ml</fullName>
                </value>
                <value>
                    <fullName>1L</fullName>
                </value>
                <value>
                    <fullName>1.5L</fullName>
                </value>
                <value>
                    <fullName>1.75L</fullName>
                </value>
                <value>
                    <fullName>2L</fullName>
                </value>
                <value>
                    <fullName>2.5L</fullName>
                </value>
                <value>
                    <fullName>3L</fullName>
                </value>
                <value>
                    <fullName>4.5L</fullName>
                </value>
                <value>
                    <fullName>9L</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sub_brand_Allocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand Allocation</label>
        <referenceTo>ASI_MFM_Sub_brand_Allocation__c</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sub_brand_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand Code</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sync_to_DW__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync to DW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_TR_Record_Type__c</fullName>
        <label>TR Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ATR</fullName>
                </value>
                <value>
                    <fullName>JDF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Total_Amount__c</fullName>
        <formula>ASI_MFM_P1_Amount__c +  ASI_MFM_P2_Amount__c +  ASI_MFM_P3_Amount__c +  ASI_MFM_P4_Amount__c +  ASI_MFM_P5_Amount__c +  ASI_MFM_P6_Amount__c +  ASI_MFM_P7_Amount__c +  ASI_MFM_P8_Amount__c +  ASI_MFM_P9_Amount__c +  ASI_MFM_P10_Amount__c +  ASI_MFM_P11_Amount__c +  ASI_MFM_P12_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Budget</fullName>
                </value>
                <value>
                    <fullName>Original Budget</fullName>
                </value>
                <value>
                    <fullName>LE1</fullName>
                </value>
                <value>
                    <fullName>LE2</fullName>
                </value>
                <value>
                    <fullName>LE3</fullName>
                </value>
                <value>
                    <fullName>LE4</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_reference1__c</fullName>
        <label>reference1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_reference2__c</fullName>
        <label>reference2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Budget</label>
    <listViews>
        <fullName>ASI_CRM_TH_Budget</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Team__c</columns>
        <columns>ASI_MFM_Type__c</columns>
        <columns>ASI_MFM_Fiscal_Year__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>ASI_CRM_Salesperson__c</columns>
        <columns>ASI_CRM_Sell_in_Sell_out__c</columns>
        <columns>ASI_CRM_On_premise_Off_premise__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Budget__c.ASI_CRM_TH_Budget</value>
        </filters>
        <label>TH CRM Budget</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASI_MFM_CAP_TW_Budget</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Budget_Type__c</columns>
        <columns>ASI_MFM_Type__c</columns>
        <columns>ASI_MFM_Fiscal_Year__c</columns>
        <columns>ASI_MFM_Total_Amount__c</columns>
        <columns>ASI_MFM_Plan__c</columns>
        <columns>ASI_MFM_A_C_Code__c</columns>
        <columns>ASI_MFM_AP_Code__c</columns>
        <columns>ASI_MFM_BU__c</columns>
        <columns>ASI_MFM_Remarks__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Budget__c.ASI_MFM_CAP_TW_Budget</value>
        </filters>
        <label>CAP TW Budget</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASI_MFM_CN_Budget_FY1516</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Plan__c</columns>
        <columns>ASI_MFM_A_C_Code__c</columns>
        <columns>ASI_MFM_AP_Code__c</columns>
        <columns>ASI_MFM_BU__c</columns>
        <columns>ASI_MFM_Customer_Name__c</columns>
        <columns>ASI_MFM_Fiscal_Year__c</columns>
        <columns>ASI_MFM_Sub_brand_Code__c</columns>
        <columns>ASI_MFM_Type__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Budget__c.ASI_MFM_CN_Budget</value>
        </filters>
        <filters>
            <field>ASI_MFM_Fiscal_Year__c</field>
            <operation>equals</operation>
            <value>FY1516</value>
        </filters>
        <label>CN Budget FY1516</label>
        <language>en_GB</language>
    </listViews>
    <listViews>
        <fullName>ASI_MFM_HK_Budget</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_A_C_Code__c</columns>
        <columns>ASI_MFM_AP_Code__c</columns>
        <columns>ASI_MFM_BU__c</columns>
        <columns>ASI_MFM_Customer_Name__c</columns>
        <columns>ASI_MFM_Fiscal_Year__c</columns>
        <columns>ASI_MFM_Sub_brand_Code__c</columns>
        <columns>ASI_MFM_Type__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Budget__c.ASI_MFM_HK_Budget</value>
        </filters>
        <label>All HK Budget</label>
        <language>en_GB</language>
        <sharedTo>
            <role>ASI_FOC_BA_Applier</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_MFM_KR_Budget</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Fiscal_Year__c</columns>
        <columns>ASI_MFM_Code__c</columns>
        <columns>ASI_MFM_Sub_brand_Code__c</columns>
        <columns>ASI_MFM_KR_AP_Type__c</columns>
        <columns>ASI_MFM_Type__c</columns>
        <columns>ASI_MFM_Budget_Type__c</columns>
        <columns>ASI_MFM_Currency__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>ASI_MFM_Total_Amount__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>ASI_MFM_Budget_External_ID_Upload__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Budget__c.ASI_MFM_KR_Budget</value>
        </filters>
        <label>All KR Budget</label>
        <language>en_GB</language>
        <sharedTo>
            <roleAndSubordinates>ASI_KOR</roleAndSubordinates>
            <roleAndSubordinates>ASI_KOR_I_T_Admin</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TnE_MY_Budget</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Budget_Type__c</columns>
        <columns>ASI_MFM_Type__c</columns>
        <columns>ASI_MFM_Fiscal_Year__c</columns>
        <columns>ASI_MFM_Plan__c</columns>
        <columns>ASI_CRM_Salesperson__c</columns>
        <columns>ASI_MFM_A_C_Code__c</columns>
        <columns>ASI_MFM_AP_Code__c</columns>
        <columns>ASI_MFM_BU__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Budget__c.ASI_TnE_MY_Budget</value>
        </filters>
        <label>TnE MY Budget</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TnE_MY_Finance_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TnE_SG_Budget</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Budget_Type__c</columns>
        <columns>ASI_MFM_Type__c</columns>
        <columns>ASI_MFM_Fiscal_Year__c</columns>
        <columns>ASI_MFM_Plan__c</columns>
        <columns>ASI_CRM_Salesperson__c</columns>
        <columns>ASI_MFM_A_C_Code__c</columns>
        <columns>ASI_MFM_AP_Code__c</columns>
        <columns>ASI_MFM_BU__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Budget__c.ASI_TnE_SG_Budget</value>
        </filters>
        <label>TnE SG Budget</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TnE_SG_Finance_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TnE_TH_Budget</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Budget_Type__c</columns>
        <columns>ASI_MFM_Type__c</columns>
        <columns>ASI_MFM_Fiscal_Year__c</columns>
        <columns>ASI_MFM_Plan__c</columns>
        <columns>ASI_CRM_Salesperson__c</columns>
        <columns>ASI_MFM_A_C_Code__c</columns>
        <columns>ASI_MFM_AP_Code__c</columns>
        <columns>ASI_MFM_BU__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Budget__c.ASI_TnE_TH_Budget</value>
        </filters>
        <label>TnE TH Budget</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TnE_TH_Finance_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_A_C_Code__c</columns>
        <columns>ASI_MFM_AP_Code__c</columns>
        <columns>ASI_MFM_BU__c</columns>
        <columns>ASI_MFM_Customer_Name__c</columns>
        <columns>ASI_MFM_Fiscal_Year__c</columns>
        <columns>ASI_MFM_Sub_brand_Code__c</columns>
        <columns>ASI_MFM_Type__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_GB</language>
    </listViews>
    <listViews>
        <fullName>All_KR_Budget_FY1516</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Fiscal_Year__c</columns>
        <columns>ASI_MFM_Code__c</columns>
        <columns>ASI_MFM_Sub_brand_Code__c</columns>
        <columns>ASI_MFM_KR_AP_Type__c</columns>
        <columns>ASI_MFM_Type__c</columns>
        <columns>ASI_MFM_Budget_Type__c</columns>
        <columns>ASI_MFM_Currency__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>ASI_MFM_Total_Amount__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>ASI_MFM_Budget_External_ID_Upload__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Budget__c.ASI_MFM_KR_Budget</value>
        </filters>
        <filters>
            <field>ASI_MFM_Fiscal_Year__c</field>
            <operation>equals</operation>
            <value>FY1516</value>
        </filters>
        <label>All KR Budget - FY1516</label>
        <language>en_GB</language>
        <sharedTo>
            <roleAndSubordinates>ASI_KOR</roleAndSubordinates>
            <roleAndSubordinates>ASI_KOR_I_T_Admin</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_KR_Budget_FY1617</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Fiscal_Year__c</columns>
        <columns>ASI_MFM_Department__c</columns>
        <columns>ASI_MFM_Sub_brand_Code__c</columns>
        <columns>ASI_MFM_Type__c</columns>
        <columns>ASI_MFM_Budget_Type__c</columns>
        <columns>ASI_MFM_Currency__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>ASI_MFM_Total_Amount__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>ASI_MFM_Plan__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Budget__c.ASI_MFM_TH_Budget</value>
        </filters>
        <filters>
            <field>ASI_MFM_Fiscal_Year__c</field>
            <operation>equals</operation>
            <value>FY1617</value>
        </filters>
        <label>All TH Budget_FY1617</label>
        <language>en_GB</language>
        <sharedTo>
            <roleAndSubordinates>ASI_KOR</roleAndSubordinates>
            <roleAndSubordinates>ASI_KOR_I_T_Admin</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_KR_Budget_FY16172</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Fiscal_Year__c</columns>
        <columns>ASI_MFM_Code__c</columns>
        <columns>ASI_MFM_Sub_brand_Code__c</columns>
        <columns>ASI_MFM_KR_AP_Type__c</columns>
        <columns>ASI_MFM_Type__c</columns>
        <columns>ASI_MFM_Budget_Type__c</columns>
        <columns>ASI_MFM_Currency__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>ASI_MFM_Total_Amount__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>ASI_MFM_Budget_External_ID_Upload__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Budget__c.ASI_MFM_KR_Budget</value>
        </filters>
        <filters>
            <field>ASI_MFM_Fiscal_Year__c</field>
            <operation>equals</operation>
            <value>FY1617</value>
        </filters>
        <label>All KR Budget - FY1617</label>
        <language>en_GB</language>
        <sharedTo>
            <roleAndSubordinates>ASI_KOR</roleAndSubordinates>
            <roleAndSubordinates>ASI_KOR_I_T_Admin</roleAndSubordinates>
        </sharedTo>
    </listViews>
</CustomObject>